<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="bible.instant.ui.main.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ibBackground"
        android:orientation="vertical"
        tools:context=".ui.main.SettingsFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/ibText"
            android:textStyle="bold" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="@{viewModel.offlineEnabled}"
            android:enabled="@{!viewModel.downloading}"
            android:onCheckedChanged="@{() -> viewModel.toggleOffline()}"
            android:text="@string/enable_offline_mode"
            android:textColor="@color/ibText"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/ibText"
            android:text="@string/enable_offline_mode_description" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="@{viewModel.progress}"
            android:visibility="@{viewModel.offlineEnabled ? View.VISIBLE : View.GONE}" />

    </LinearLayout>
</layout>

